Hello
Put changelog in plain text please
Make sure to clear this after each release

Put changelog here:
-----------------
- Fixed typed entry deserialization