@@ -4,4 +4,5 @@ Make sure to clear this after each release
 
 Put changelog here:
 -----------------
-- Fixed typed entry deserialization
+- Added stack traces to network decoder exceptions
+- Added a config option to allow disabling the experimental world warning
